--- a/css/tablet.css
+++ b/css/tablet.css
@@ -21,28 +21,40 @@
     /* Header */
 
     header {
-        margin: 0% 3% 2% 3%;
+        margin: 0% 1% 0 1%;
+        padding: 0%;
     }
-
+    
     nav {
-        margin: 4% 5% auto auto;
+        width: 40%;
     }
-
+    
     header img {
-        margin: 3% auto auto 4%;
-        
+        height: 40px;
+        width: 100px;
+        object-fit: cover;
+        margin-top: 2%;
     }
-
+    
     nav ul {
-        justify-content: space-between;
-        gap: 20%;
-        font-size: 14px;
+        display: flex;
+        justify-content: space-around;
+        gap: 10%;
+        align-items: center;
+        list-style-type: none;
+        font-size: 15px;
+        margin: 0;
+        height: 100%;
     }
-
-    nav a {
-        padding-top: 41px;
+    
+    nav li{
+        margin-top: 0%;
+        height: 100%;
+        padding-left: 5%;
+        padding-right: 5%;
+        padding-top: 10%;
     }
-
+    
     /* Section recherche */
 
     #recherche{
@@ -64,37 +76,25 @@
     /* Section recherche - filtres */
 
     #filtre-bar{
-        display: flex;
-        flex-flow: row nowrap;
-        gap: 3%;
+        gap: 1%;
     }
-
-    #filtre-list{
-        width: 75%;
-        height: 48px;
-        display: flex;
-        flex-flow: row nowrap;
-        gap: 2%;
-    }
-
     
-
-    .first-filtre{
-        padding-right: 10px;
+    .filtre i{
+        width: 40px;
+        height: 40px;
     }
-
-    .filtre-animaux{
-        width: 250px;
-    }
-
+    
     .filtre-content{
-        font-size: 14px;
+        font-weight: bold;
+        font-size: 12px;
+        padding: 0 25px 0 5px;
     }
+    
 
     /* Section Resultats */
 
     #resultats{
-        gap: 2%;
+        gap: 1%;
         margin: 0% 2% 0% 2%;
     }
 
@@ -119,7 +119,7 @@
     /* Section Resultats - article hébergements - container cartes */
 
     #hebergement-card-container{
-        gap: 1%;
+        gap: 0%;
         padding: 1%;
     }
 
